nginx-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        color: green
    spec:
      containers:
        - name: nginx
          image: markblazquez/frontsec:v111
          imagePullPolicy: IfNotPresent
          ports:
            - name: uno
              protocol: TCP
              containerPort: 80
            - name: dos
              protocol: TCP
              containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: nginx-demo-service
spec:
  ports:
    - name: uno
      port: 80
      targetPort: 80
      protocol: TCP
    - name: dos
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
