nginx-deployment2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  labels:
    app: nginx2
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
        color: green
    spec:
      containers:
        - name: nginx2
          image: markblazquez/frontsecapa:v34
          imagePullPolicy: IfNotPresent
          ports:
            - name: uno
              protocol: TCP
              containerPort: 81
            - name: dos
              protocol: TCP
              containerPort: 444
            
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: nginx-demo-service2
spec:
  ports:
    - name: uno
      port: 81
      targetPort: 81
      protocol: TCP
    - name: dos
      port: 444
      targetPort: 444
      protocol: TCP
  selector:
    app: nginx2
  sessionAffinity: None
  type: NodePort
