node-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node
  labels:
    app: node
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
        color: green
    spec:
      containers:
        - name: node
          image: markblazquez/backendk:v2
          imagePullPolicy: IfNotPresent
          ports:
            - name: node
              protocol: TCP
              containerPort: 8080
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: node-demo
spec:
  ports:
    - name: node
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: node
  sessionAffinity: None
  type: NodePort
